<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addrooms">

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="times"
        android:text="@string/restName"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/memCount"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:hint="@string/cMember"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/cName"
        tools:layout_editor_absoluteX="16dp" />

    <Spinner
        android:id="@+id/rType"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@array/cRoomtype"
        android:inputType="number"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="405dp" />

    <EditText
        android:id="@+id/cName"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/cName"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@+id/text_dashboard"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/rDuration"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/cDuration"
        android:inputType="number"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/totalPrice"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/cPrice"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="496dp" />


    <Button
        android:id="@+id/btn_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearAll"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="667dp" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registers"
        tools:layout_editor_absoluteX="253dp"
        tools:layout_editor_absoluteY="667dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>